# image_tutorial

./: LICENSE  README.md
cpp/: .clang-format  CMakeLists.txt  README.md
cpp/01_io/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/02_color/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/03_geometry/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/04_threshold/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/05_smoothing/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/06_edge/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/07_morphology/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/08_histogram/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/09_contours/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/10_template_matching/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/11_features/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/12_video/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/13_calibration/: CMakeLists.txt  GUIDE.md  README.md  main.cpp
cpp/14_dnn/: CMakeLists.txt  GUIDE.md  README.md  classify.cpp  detect.cpp
cpp/common/: utils.hpp
data/: README.md  fetch_samples.sh
python/: README.md  requirements.txt  utils.py
python/01_io/: GUIDE.md  README.md  main.py  notebook.ipynb
python/02_color/: GUIDE.md  README.md  main.py  notebook.ipynb
python/03_geometry/: GUIDE.md  README.md  main.py  notebook.ipynb
python/04_threshold/: GUIDE.md  README.md  main.py  notebook.ipynb
python/05_smoothing/: GUIDE.md  README.md  main.py  notebook.ipynb
python/06_edge/: GUIDE.md  README.md  main.py  notebook.ipynb
python/07_morphology/: GUIDE.md  README.md  main.py  notebook.ipynb
python/08_histogram/: GUIDE.md  README.md  main.py  notebook.ipynb
python/09_contours/: GUIDE.md  README.md  main.py  notebook.ipynb
python/10_template_matching/: GUIDE.md  README.md  main.py  notebook.ipynb
python/11_features/: GUIDE.md  README.md  main.py  notebook.ipynb
python/12_video/: GUIDE.md  README.md  main.py  notebook.ipynb
python/13_calibration/: GUIDE.md  README.md  main.py  notebook.ipynb
python/14_dnn/: GUIDE.md  README.md  main.py  notebook.ipynb
